RESOLVED FIXED169529
REGRESSION (r213764): Async image decoding is disabled for animated images
https://bugs.webkit.org/show_bug.cgi?id=169529
Summary REGRESSION (r213764): Async image decoding is disabled for animated images
Said Abou-Hallawa
Reported 2017-03-12 15:20:12 PDT
The change r213764 causes the animated images to be decoded synchronously because we were calling frameImageAtIndex() with an empty sizeForDrawing but with a valid subsamplingLevel. This call is translated to be synchronous image decoding. The fix is get the current image frame without any decoding. This is because are sure that in the case of animated image, the current image frame can not be deleted.
Attachments
Patch (2.10 KB, patch)
2017-03-12 15:21 PDT, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2017-03-12 15:21:25 PDT
Radar WebKit Bug Importer
Comment 2 2017-03-12 15:33:42 PDT
WebKit Commit Bot
Comment 3 2017-03-12 16:52:34 PDT
Comment on attachment 304204 [details] Patch Clearing flags on attachment: 304204 Committed r213774: <http://trac.webkit.org/changeset/213774>
WebKit Commit Bot
Comment 4 2017-03-12 16:52:37 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5 2017-03-12 18:08:36 PDT
Comment on attachment 304204 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=304204&action=review > Source/WebCore/ChangeLog:13 > + The change r213764 causes the animated images to be decoded synchronously > + because we were calling frameImageAtIndex() with an empty sizeForDrawing > + but with a valid subsamplingLevel. This call is translated to be synchronous > + image decoding. The fix is get the current image frame without any decoding. > + This is because are sure that in the case of animated image, the current > + image frame can not be deleted. No test caught this?
Said Abou-Hallawa
Comment 6 2017-03-12 19:05:39 PDT
Comment on attachment 304204 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=304204&action=review >> Source/WebCore/ChangeLog:13 >> + image frame can not be deleted. > > No test caught this? I will write a test since this is the second time the same problem happens and no test caught it.
Note You need to log in before you can comment on or make changes to this bug.