REGRESSION (r213764): Async image decoding is disabled for animated images https://bugs.webkit.org/show_bug.cgi?id=169529

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2017-03-12
Reviewed by Jon Lee.

The change r213764 causes the animated images to be decoded synchronously
because we were calling frameImageAtIndex() with an empty sizeForDrawing
but with a valid subsamplingLevel. This call is translated to be synchronous
image decoding. The fix is get the current image frame without any decoding.
This is because are sure that in the case of animated image, the current
image frame can not be deleted.

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::draw):

Canonical link: https://commits.webkit.org/186521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213774 268f45cc-cd09-0410-ab3c-d52691b4dbfc